chapter_02/ToDo_app/frontend/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: frontend
  labels:
      name: frontend
spec:
  rules:
  - host: frontend.yolo.yolo.com
    http:
      paths:
        - backend:
            serviceName: frontend
            servicePort: 8080
